@@ -57,4 +57,7 @@
 1
 [4, [2, 2], [[3, 1; 0, 1], [114, 1; 0, 1]]]
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], [0]]
-Total time spent: 30
+[2, 2, 5]
+[1, 2, [1, 0; 0, 1]]
+0
+Total time spent: 28
