@@ -67,3 +67,9 @@ bnr=bnrinit(bnfinit(x^2-97),1,1); bnrrootnumber(bnr,[])
 
 bnfnarrow(bnfinit(x^2-460))
 bnrconductor(bnfinit(K),4,Mat(3))
+
+\\#1804
+K = bnrinit(bnfinit(y^2-5),[1,[1,1]]);
+bnrdisc(K)
+bnrdisc(K,,,1)
+bnrdisc(K,,,2)
